atlantis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlantis
  labels:
    app.kubernetes.io/name: atlantis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: atlantis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: atlantis
    spec:
      serviceAccountName: atlantis-sa
      containers:
        - name: atlantis
          image: ghcr.io/runatlantis/atlantis:v0.28.3
          ports:
          - name: atlantis
            containerPort: 4141
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 100m
          livenessProbe:
            periodSeconds: 60
            httpGet:
              path: /healthz
              port: 4141
              scheme: HTTP
          readinessProbe:
            periodSeconds: 60
            httpGet:
              path: /healthz
              port: 4141
              scheme: HTTP
          volumeMounts:
          - name: atlantis-repo-config
            mountPath: /etc/atlantis
      volumes:
        - name: atlantis-repo-config
          configMap:
            name: atlantis-repo-config
---
apiVersion: v1
kind: Service
metadata:
  name: atlantis
spec:
  type: ClusterIP
  ports:
  - name: atlantis
    port: 80
    targetPort: 4141
  selector:
    app.kubernetes.io/name: atlantis
